@@ -30,7 +30,7 @@ action.</p>
 
 <h2>Recipient Action</h2>
 
-<p>Same as the sender action.</p>
+<p>Same as the sender action, with no exception for empty addresses.</p>
 
 <h2>Data Action</h2>
 
